--- a/main.ipynb
+++ b/main.ipynb
@@ -233,7 +233,12 @@
     "\n",
     "np.random.shuffle(data)\n",
     "data_dev = data[0:1000].T\n",
-    "y_dev = "
+    "Y_dev = data_dev[0]\n",
+    "X_deV = data_dev[1:n]\n",
+    "\n",
+    "data_train = data[1000:m]\n",
+    "Y_train = data_train[0]\n",
+    "X_train = data_train[1:n]"
    ]
   }
  ],
