--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +239,71 @@
     "data_train = data[1000:m]\n",
     "Y_train = data_train[0]\n",
     "X_train = data_train[1:n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(784,)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train[:,0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Initializing Parameter\n",
+    "def init_params():\n",
+    "    w1 = np.random.rand(10,784)-0.5\n",
+    "    b1 = np.random.rand(10,1)-0.5\n",
+    "    w2 = np.random.rand(10,10)-0.5\n",
+    "    b2 = np.random.rand(10,10)-0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#step1: Forward Propogation\n",
+    "def RelU(z):\n",
+    "    return np.maximum(0,z)\n",
+    "\n",
+    "def softmax(z):\n",
+    "    return np.exp(z)/np.sum(np.exp(z))\n",
+    "\n",
+    "def forward_prop(w1,b1,w2,b2,X):\n",
+    "    z1 = w1.dot(X) + b1\n",
+    "    A1 = RelU(z1)\n",
+    "    z2 = w2.dot(A1) +b2\n",
+    "    A2 = softmax(z2)\n",
+    "    return z1,A1,z2,A2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#step2: back Propogation\n",
+    "def One_hot():"
    ]
   }
  ],
